contour/manifests/echoserver-backend-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-protected
spec:
  selector:
    matchLabels:
      app: echoserver-protected
  template:
    metadata:
      labels:
        app: echoserver-protected
    spec:
      containers:
      - name: echoserver
        image: ghcr.io/tsaarni/echoserver:latest
        ports:
        - name: http-api
          containerPort: 8080
        - name: https-api
          containerPort: 8443
        volumeMounts:
        - name: echoserver-cert
          mountPath: /certs
          readOnly: true
      volumes:
      - name: echoserver-cert
        secret:
          secretName: echoserver-cert
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver-protected
spec:
  ports:
  - name: http
    port: 443
    targetPort: https-api
  selector:
    app: echoserver-protected
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: echoserver-protected
spec:
  virtualhost:
    fqdn: protected.127-0-0-101.nip.io
  routes:
    - services:
        - name: echoserver-protected
          port: 443
          protocol: tls
          validation:
            caSecret: internal-root-ca
            subjectName: echoserver

# http http://protected.127-0-0-101.nip.io
